<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark_color"
    android:orientation="vertical"
    tools:context=".favorites.presentation.FavoriteEventsActivity"
    >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_stars_with_alpha"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_size_44dp"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginVertical="@dimen/dp_size_16dp"
            app:srcCompat="@drawable/img_kolesa_conf_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/favorites_title_text_view"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_size_24sp"
            android:textAlignment="center"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/activity_favorite_events_content_for_empty_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            app:srcCompat="@drawable/ic_spaceman"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="@dimen/dp_size_24dp"
            android:text="@string/favorites_empty_text_view_text"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_size_16sp"
            android:textStyle="bold"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_size_80dp"
        android:orientation="vertical"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_favorite_events_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:layout_marginHorizontal="@dimen/dp_size_24dp"
            android:overScrollMode="never"
            android:paddingBottom="@dimen/dp_size_80dp"
            tools:itemCount="5"
            tools:listitem="@layout/all_events_branch_item"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        >
        <Button
            android:id="@+id/activity_favorite_events_button_to_home"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="@dimen/dp_size_16dp"
            android:background="@drawable/bg_favorite_button"
            android:drawablePadding="@dimen/dp_size_4dp"
            android:padding="@dimen/dp_size_8dp"
            android:text="@string/go_to_main_page_button_text"
            android:textAllCaps="false"
            android:textColor="@color/primary_blue_color"
            android:textSize="@dimen/sp_size_16sp"
            app:drawableLeftCompat="@drawable/ic_home_button"
            tools:text="На главную"
            />
    </FrameLayout>
</FrameLayout>
</LinearLayout>
